@@ -2,6 +2,7 @@ Revision history for DBIx-TableLoader
 
 {{$NEXT}}
 
+  - Enable custom error handling via 'handle_invalid_row' option
   - use Try::Tiny;
 
 1.001     2011-07-14T23:33:27Z
